--- a/templates/about.html
+++ b/templates/about.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ethan McAllister - About</title>
-    <script src="../static/code.js"></script>
-    <link rel="stylesheet" href="../static/style.css">
+    <script src="/static/code.js"></script>
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
-    <h1>This is some stuff about me:</h1>
+    <div id="title-banner">
+        <h1>About Me</h1>
+    </div>
+
+    <nav>
+        <a href="/">Home</a>
+        <a href="/projects">Projects</a>
+        <a href="/experience">Experience</a>
+        <a href="/about">About</a>
+    </nav>
+
+    <p>My name is Ethan McAllister and I am an aspiring software developer. Some of my hobbies include camping, woodworking, and soccer.</p>
 </body>
 </html>
