--- a/templates/experience.html
+++ b/templates/experience.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ethan McAllister - Experience</title>
     <script src="../static/code.js"></script>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
-    <h1>Below is my Experience:</h1>
+    <div id="title-banner">
+        <h1>Experience</h1>
+    </div>
+
+    <nav>
+        <a href="/">Home</a>
+        <a href="/projects">Projects</a>
+        <a href="/experience">Experience</a>
+        <a href="/about">About</a>
+    </nav>
+
+    <h3>Below is my Experience</h3>
+    <ul>
+        <li>Venue Operations Team Lead: USU, 1 yr.</li>
+        <li>Automotive Logistical Specialist: Utah Army National Guard, 4 yrs.</li>
+        <li>Venue Operations Rep: USU, 2 yrs.</li>
+    </ul>
 </body>
 </html>
