--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ethan McAllister</title>
     <script src="../static/code.js"></script>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
-    <h1>Hello, my name is Ethan McAllister</h1>
+    <div id="title-banner">
+        <h1>Ethan McAllister - Home</h1>
+    </div>
+
+    <nav>
+        <a href="/">Home</a>
+        <a href="/projects">Projects</a>
+        <a href="/experience">Experience</a>
+        <a href="/about">About</a>
+    </nav>
+
+    <p>This is a website about me in order for people to get to know me better. To learn more about me, click on the links above.</p>
 </body>
 </html>
