--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,14 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ethan McAllister - Projects</title>
     <script src="../static/code.js"></script>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
-    <h1>Here are some of my Projects:</h1>
+    <div id="title-banner">
+        <h1>Projects</h1>
+    </div>
+
+    <nav>
+        <a href="/">Home</a>
+        <a href="/projects">Projects</a>
+        <a href="/experience">Experience</a>
+        <a href="/about">About</a>
+    </nav>
+
+    <h3>Here are some of my Projects:</h1>
     <ul>
-        <li>Project 1</li>
-        <li>Project 2</li>
-        <li>Project 3</li>
+        <li>Project 1: Crypto Currency Arbitrage trader</li>
+        <ul>
+            <li>An algo-trading python program that retrieves daily crypto exchange rates from a web API, calculates arbitrage opportunity using graphs, and buys/sells crypto currencies using the Alpaca API.</li>
+        </ul>
+        <li>Project 2: Personal resume website</li>
+        <ul>
+            <li>A personal website hosted by github highlighting my resume items and experience.</li>
+        </ul>
+        <li>Project 3: HTTP Server from Scratch:</li>
+        <ul>
+            <li>Implemented the HTTP server architecture in python that is able to host websites.</li>
+        </ul>
     </ul>
 </body>
 </html>
